--- a/ch5_1.qmd
+++ b/ch5_1.qmd
@@ -59,7 +59,7 @@ $$ |\pi_j(X)|^2 \sim \chi_2(\dim E_j).$$
 :::{.proof}
 
 
-Pour chaque $E_i$, notons $d_i$ sa dimension et choisissons-lui une base orthonormale $e^i_1, \dotsc, e^i_{d_i}$. La projection orthogonale de $X$ sur $E_i$ est $\pi_i(X)= \sum_{t=1}^{d_i} \langle X, e^i_t\rangle e^i_t$. Notons $X^i_t=\langle X, e^i_t\rangle$. Le vecteur $(X^i_t)$, qui contient bien $d_1+\dotsb+d_k=n$ éléments, est une fonction linéaire du vecteur gaussien centré $X$, donc est lui-même un vecteur gaussien centré. Calculons sa covariance : de façon générale, si $e,f$ sont deux vecteurs fixés, 
+Pour chaque $E_i$, notons $d_i$ sa dimension et choisissons-lui une base orthonormale $e^i_1, \dotsc, e^i_{d_i}$. La projection orthogonale de $X$ sur $E_i$ est $\pi_i(X)= \sum_{t=1}^{d_i} \langle X, e^i_t\rangle e^i_t$. Notons $X^i_t=\langle X, e^i_t\rangle$. Le vecteur $(X^i_t)$ (avec $i=1, \dotsc, k$ et $t = 1, \dotsc, d_i$), qui contient bien $d_1+\dotsb+d_k=n$ éléments, est une fonction linéaire du vecteur gaussien centré $X$, donc est lui-même un vecteur gaussien centré. Calculons sa covariance : de façon générale, si $e,f$ sont deux vecteurs fixés, 
 $$\mathbb{E}[\langle X, e\rangle \langle X, f\rangle] = \sum_{i,j}e_if_j \mathrm{Cov}(X_i, X_j) = \langle e, f\rangle.$$
 Il est alors immédiat que la matrice de covariance du vecteur gaussien $(X^i_t)$ n'est autre que la matrice $(\langle e^i_t, e^j_s \rangle)$, c'est-à-dire l'identité puisque les $(e^i_t)$ forment une base orthonormale de $\mathbb{R}^n$. Il en résulte les deux points de l'énoncé.
 
@@ -71,14 +71,14 @@ ce qui est bien une somme de $d_i$ gaussiennes $N(0,1)$ indépendantes, donc une
 
 
 
-## Loi de Fisher
+## Loi de Fisher {#sec-fisher}
 
 Si $N$ est un vecteur et $X,Y$ sont les projections de $N$ sur deux sous-espaces vectoriels orthogonaux, le théorème de Cochran dit que $X$ et $Y$ sont des lois du $\chi_2$ indépendantes de paramètres $p=\dim  E, q = \dim F$. La loi de leur rapport $X/Y$ est connue et fréquemment utilisée en statistiques. 
 
 
 :::{#thm-fisher}
 
-Soient $X,Y$ deux variables aléatoires indépendantes, de lois respectives $\chi_2(p)$ et $\chi_2(q)$. La loi du rapport $(X/p)/(Y/q)$ s'appelle loi de Fisher de paramètres $p,q$. Sa densité est donnée par 
+Soient $X,Y$ deux variables aléatoires indépendantes, de lois respectives $\chi_2(p)$ et $\chi_2(q)$. La loi du rapport $(X/p)/(Y/q)$ s'appelle loi de Fisher de paramètres $p,q$, et on la note $\mathscr{F}_{p,q}$. Sa densité est donnée par 
 $$ f_{p,q}(x) = \frac{\mathbf{1}_{x>0}}{Z_{p,q}}\frac{\left(\frac{px}{px + q}\right)^{\frac{p}{2}} \left(1 - \frac{px}{px + q}\right)^{\frac{q}{2}}}{x}$${#eq-fisherdensity}
 où la constante $Z_{p,q}$ est $B(p/2, q/2)$, c'est-à-dire
 $$ Z_{p,q} =  \int_0^1 u^{\frac{p}{2}-1}(1-u)^{\frac{q}{2}-1}du.$$
