--- a/ch5_01.qmd
+++ b/ch5_01.qmd
@@ -1,7 +1,7 @@
 
 # Modèles linéaires
 
-## Modèle gaussien
+## Modèle gaussien {#sec-mlg}
 
 À ce stade, nous n'avons fait aucune hypothèse statistique ni probabiliste sur le modèle : les $\bx_i, y_i$ étaient donnés tels quels. Le *modèle linéaire gaussien* avec variables explicatives $\bx_1, \dotsc, \bx_n$ exogènes consiste à supposer que $Y = X\bt + \varepsilon$, où $\varepsilon = N(0,\sigma^2 I_n)$. Formellement, le modèle est indexé par $\bt$ et $\sigma^2$, et donné par 
 $$P_{\bt, \sigma^2} = N(X\bt, \sigma^2 I_d).$$ 
