--- a/ch4_ex.qmd
+++ b/ch4_ex.qmd
@@ -14,8 +14,8 @@
 
 Pour tous les cas suivants, il faut savoir réaliser rapidement un test puissant, voire même optimal au sens qu'il vous plaira. 
 
-- Tester $\mu = \mu_0$ contre $\mu = \mu_1$ dans un échantillon $N(\mu, \sigma^2)$ lorsque $\mu$ est connu. 
-- Même question lorsque $\mu$ est inconnu. 
+- Tester $\mu = \mu_0$ contre $\mu = \mu_1$ dans un échantillon $N(\mu, \sigma^2)$ lorsque $\sigma$ est connu. 
+- Même question lorsque $\sigma$ est inconnu. 
 - Soient $X_1, \dotsc, X_n$ un échantillon iid $N(\mu_1,\sigma_1^2)$ et $Y_1, \dotsc, Y_m$ ($m$ et $n$ ne sont pas forcément égaux) un échantillon iid de loi $N(\mu_2,\sigma_2^2)$. Tester $\sigma_1 = \sigma_2$ lorsque $\mu_1$ et $\mu_2$ sont connues. 
 - Même question lorsque $\mu_1$ et $\mu_2$ ne sont pas connues. 
 - Donner la forme d'un test sur la valeur de $p$ pour une réalisation d'une loi $\mathrm{Bin}(n,p)$ et calculer son niveau asymptotique quand $n\to\infty$. 
